// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Homepage renders homepage on desktop 1`] = `
<div>
  <div
    class="Homepage"
  >
    <div
      class="Content"
    >
      <div
        data-opened="false"
        data-testid="mock-filtering-sidebar"
      >
        Mock FilteringSidebar
        <button>
          Close FilteringSidebar
        </button>
      </div>
      <div>
        Mock SoilhiveMap
      </div>
      <div
        data-opened="true"
        data-testid="mock-datasets-sidebar"
      >
        Mock DatasetsSidebar
        <button>
          Close DatasetsSidebar
        </button>
      </div>
    </div>
    <button
      class="Button Custom Small FiltersButton"
      data-testid="sh-ui-button"
      type="button"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
       Filters 
      <div
        data-testid="mock-filters-counter"
      >
        Mock FiltersCounter
      </div>
    </button>
  </div>
</div>
`;

exports[`Homepage renders homepage on mobile 1`] = `
<div>
  <div
    class="Homepage"
  >
    <div
      class="Content"
    >
      <div
        data-opened="false"
        data-testid="mock-filtering-sidebar"
      >
        Mock FilteringSidebar
        <button>
          Close FilteringSidebar
        </button>
      </div>
      <div>
        Mock SoilhiveMap
      </div>
      <div
        data-opened="false"
        data-testid="mock-datasets-sidebar"
      >
        Mock DatasetsSidebar
        <button>
          Close DatasetsSidebar
        </button>
      </div>
    </div>
    <div
      class="MobileTabNavigation Primary"
      data-testid="sh-ui-mobile-tab-navigation"
    >
      <div
        class="MobileTabNavigationItem Active"
        data-testid="sh-ui-mobile-tab-navigation-item"
        role="button"
      >
        <svg
          data-testid="svg-icon-mock"
        >
          mock-svg
        </svg>
         
        Map
      </div>
      <div
        class="MobileTabNavigationItem"
        data-testid="sh-ui-mobile-tab-navigation-item"
        role="button"
      >
        <svg
          data-testid="svg-icon-mock"
        >
          mock-svg
        </svg>
         
        Filters
      </div>
      <div
        class="MobileTabNavigationItem"
        data-testid="sh-ui-mobile-tab-navigation-item"
        role="button"
      >
        <svg
          data-testid="svg-icon-mock"
        >
          mock-svg
        </svg>
         
        Datasets
      </div>
    </div>
  </div>
</div>
`;
